--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
+/* Header */
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+
+    max-width: 1200px;   /* controls how far apart they spread */
+    margin: 0 auto;      /* centers the header block */
+  }
+
+.header-title {
+    font-size: 1.8rem;
+    margin-left: 100px;
+  }
+  
+  .header-title span {
+    color: #7a4dff; /* purple highlight */
+  }
+  
+  .logo img {
+    width: 240px;
+    height: auto;
+    margin-right: 100px;
+  }
+
+  /* Hero */
+.hero {
+    background: url("hero-bg.png") no-repeat center center/cover;
+    padding: 60px 20px;
+    text-align: center;
+  }
+  
+  .hero-content {
+    max-width: 700px;
+    margin: 0 auto;
+  }
+  
+  .hero h2 {
+    font-size: 2rem;
+    margin-bottom: 15px;
+  }
+  
+  .hero p {
+    font-size: 1rem;
+    margin-bottom: 20px;
+  }
+  
+  .hero-btn {
+    background: #7a4dff;
+    color: #fff;
+    border: none;
+    padding: 12px 25px;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 6px;
+  }
+  
+  .hero-btn:hover {
+    background: #5d36cc;
+  }
+
+
 .start1{
 margin-top:200px;
 margin-left:150px;
@@ -27,6 +90,7 @@ body{
     margin:0;
     padding:0;
     background-color:#1E1E1E;
+    box-sizing: border-box;
 }
 /* kategorije */
 .dugmicikategorije1{
